# mtec-schedule-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
src/bot/: main.py  phrases.py
src/bot/config/: __init__.py  bot_config.py  other.py  paths.py  requests_data.py  settings.py  themes.py
src/bot/core/: dependencies.py
src/bot/core/filters/: custom_filters.py
src/bot/core/fsm/: states.py
src/bot/core/handlers/: __init__.py  admin.py  chat.py  common.py  decorators.py  journal.py  schedule.py  setting.py
src/bot/core/middlewares/: __init__.py  antispam.py  blacklist.py
src/bot/services/: __init__.py  database.py  image_service.py  journal_service.py  mailing_service.py  models.py  schedule_checker_service.py  schedule_service.py
src/bot/utils/: __init__.py  formatters.py  hash.py  keyboard.py  log.py  markup.py  utils.py
src/static/css/: style.css
src/static/themes/: Classic.psd  DarkFog.psd  Fog.psd  LightFog.psd  MidNight.psd  MtecCore.psd  Night.psd
