[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "temm-dev",email = "temm-dev@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles (>=24.1.0,<25.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "textwrap3 (>=0.9.2,<0.10.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "cryptography (>=45.0.5,<46.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
